DigicielFull/force-app/main/default/objects/amc__Risk__c/amc__Risk__c.object-meta.xml
<CustomObject>
    <description>This object is used to record any risks associated to a particular project</description>
    <label>Risk</label>
    <nameField>
        <label>Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>