DigicielFull/force-app/main/default/objects/amc__Risk__c/fields/amc__Area_of_Impact__c.field-meta.xml
<CustomField>
    <fullName>amc__Area_of_Impact__c</fullName>
    <inlineHelpText>Identifies the areas of the project the risk may impact</inlineHelpText>
    <label>Area of Impact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Scope</fullName>
            </value>
            <value>
                <fullName>Benefit</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>