DigicielFull/force-app/main/default/objects/amc__Risk__c/fields/amc__Category__c.field-meta.xml
<CustomField>
    <fullName>amc__Category__c</fullName>
    <inlineHelpText>Identifies the category of the risk</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strategic / Commercial</fullName>
            </value>
            <value>
                <fullName>Economic / Financial</fullName>
            </value>
            <value>
                <fullName>Legal / Regulatory</fullName>
            </value>
            <value>
                <fullName>Organisation / Human Factors</fullName>
            </value>
            <value>
                <fullName>Political</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Technical / Operational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>