DigicielFull/force-app/main/default/objects/amc__Risk__c/fields/amc__Counter_Measure__c.field-meta.xml
<CustomField>
    <fullName>amc__Counter_Measure__c</fullName>
    <inlineHelpText>Identifies the strategy selected to counter the risk</inlineHelpText>
    <label>Counter Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prevention</fullName>
            </value>
            <value>
                <fullName>Reduction</fullName>
            </value>
            <value>
                <fullName>Transference</fullName>
            </value>
            <value>
                <fullName>Acceptance</fullName>
            </value>
            <value>
                <fullName>Contingency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>