DigicielFull/force-app/main/default/objects/amc__Risk__c/fields/amc__Counter_Measure_Description__c.field-meta.xml
<CustomField>
    <fullName>amc__Counter_Measure_Description__c</fullName>
    <inlineHelpText>Identifies the details of the counter measure</inlineHelpText>
    <label>Counter Measure Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>