DigicielFull/force-app/main/default/objects/amc__Risk__c/fields/amc__Current_Status__c.field-meta.xml
<CustomField>
    <fullName>amc__Current_Status__c</fullName>
    <inlineHelpText>Identifies the current status of the risk</inlineHelpText>
    <label>Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Reducing</fullName>
            </value>
            <value>
                <fullName>Increasing</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>