DigicielFull/force-app/main/default/objects/amc__Risk__c/fields/amc__Date_Identified__c.field-meta.xml
<CustomField>
    <fullName>amc__Date_Identified__c</fullName>
    <inlineHelpText>The date the risk was identified</inlineHelpText>
    <label>Date Identified</label>
    <type>Date</type>
</CustomField>