DigicielFull/force-app/main/default/objects/amc__Risk__c/fields/amc__Impact_Rating__c.field-meta.xml
<CustomField>
    <fullName>amc__Impact_Rating__c</fullName>
    <inlineHelpText>Identifies the level of impact this risk could have on the project</inlineHelpText>
    <label>Impact Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>