DigicielFull/force-app/main/default/objects/amc__Risk__c/fields/amc__Impact_Score__c.field-meta.xml
<CustomField>
    <fullName>amc__Impact_Score__c</fullName>
    <formula>Case(amc__Impact_Rating__c, &quot;Very High&quot;, 5, &quot;High&quot;, 4, &quot;Medium&quot;, 3, &quot;Low&quot;, 2, &quot;Very Low&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the score associated with the Impact Rating</inlineHelpText>
    <label>Impact Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>