DigicielFull/force-app/main/default/objects/amc__Risk__c/fields/amc__Include_in_Weekly_Status_Report__c.field-meta.xml
<CustomField>
    <fullName>amc__Include_in_Weekly_Status_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>can this be included in the weekly status report pdf?</description>
    <label>Include in Weekly Status Report</label>
    <type>Checkbox</type>
</CustomField>