DigicielFull/force-app/main/default/objects/amc__Risk__c/fields/amc__Milestone__c.field-meta.xml
<CustomField>
    <fullName>amc__Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Milestone record</inlineHelpText>
    <label>Milestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.amc__Project__c</field>
            <operation>equals</operation>
            <valueField>amc__Milestone__c.amc__Project__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>amc__Milestone__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>