DigicielFull/force-app/main/default/objects/amc__Risk__c/fields/amc__Risk_Notes_RT__c.field-meta.xml
<CustomField>
    <fullName>amc__Risk_Notes_RT__c</fullName>
    <inlineHelpText>Detailed Notes about the Risk</inlineHelpText>
    <label>Risk Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>