DigicielFull/force-app/main/default/objects/amc__Risk__c/fields/amc__Risk_Owner__c.field-meta.xml
<CustomField>
    <fullName>amc__Risk_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Role that is responsible for this Risk</inlineHelpText>
    <label>Risk Owner</label>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>